[package]
name = "pelipper-post-office"
version = "0.1.0"
authors = ["Marco 'Capypara' Köpcke <hello@capypara.de>"]
edition = "2021"
repository = "https://github.com/SkyTemple/pelipper-post-office"
license = "GPL-3.0-or-later"

[features]
default = ["dns"]
dns = ["trust-dns-server"]

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
#tokio-native-tls = "0.3"
#async-stream = "0.3"
chrono = "0.4"
structopt = "0.3"
log = "0.4"
stderrlog = "0.5"
anyhow = "1"
directories = "4"
const_format = "0.2"
packed_struct = "0.10"
clru = "0.5"
bytes = "1"
rand = "0.8"
data-encoding = "2"
itertools = "0.10"
md5 = "0.7"
indexmap = "1"
# feature(dns)
trust-dns-server = { version = "0.20", optional = true }
